# Discord_song_bot

./: .gitignore  CHANGELOG.md  COMPLETE-STATUS.md  DEPLOY-NOW.md  Dockerfile  FINAL-README.md  FINAL-STATUS.md  FINAL-SUMMARY.md  LICENSE  PROJECT-STATUS.md  Pipfile  QUICKSTART.md  README-AR.md  README.md  README_COOKIES.md  RENDER_SETUP.md  SUMMARY.md  __init__.py  app.py  config.example.py  config.py  cookies.txt  default.nix  deploy.md  docker-compose.yml  env.example  flake.nix  keep_alive.py  main.py  main.py.backup  main_backup.py  nixpacks.toml  pyproject.toml  quick_start.md  railway-build.sh  railway-deploy.md  railway-setup.md  railway-status.md  railway.json  render.yaml  (+5 more)
